Change image targets

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<ul>
 								<li><a href="mosque.html">Orland Park Prayer Center</a></li>
 								<li><a href="#">The Mecca Center</a></li>
-								<li><a href="#">New York City</a></li>
+								<li><a href="#">Muslim Community Center</a></li>
 								<!-- <li>
 									<a href="#">Submenu</a>
 									<ul>
@@ -35,6 +35,7 @@
 						</li>
 						<!-- <li><a href="elements.html">Elements</a></li> -->
 						<li><a href="#">Members</a></li>
+						<li><a href="#">Contact/Advertise With Us</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -52,7 +53,7 @@
 					<div class="image-wrapper">
 						<img src="images/frame.png" class="frame" alt="" />
 						<div class="image">
-							<img src="images/pic01.jpg" alt="" />
+							<img src="images/pic01.png" alt="" />
 						</div>
 					</div>
 				</div>
@@ -63,7 +64,7 @@
 							<div class="spotlights">
 								<div class="spotlight">
 									<div class="image fit">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pic02.png" alt="" />
 									</div>
 									<div class="content">
 										<h2>Orland Park Prayer Center</h2>
@@ -75,7 +76,7 @@
 								</div>
 								<div class="spotlight">
 									<div class="image fit alt">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pic03.png" alt="" />
 									</div>
 									<div class="content">
 										<h2>The Mecca Center</h2>
@@ -87,13 +88,13 @@
 								</div>
 								<div class="spotlight">
 									<div class="image fit">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/pic04.png" alt="" />
 									</div>
 									<div class="content">
-										<h2>Augue diam vehicula</h2>
-										<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec tortor nibh sed augue. Integer eu magna sit amet metus ferment. Pellentesque a diam sit amet mi ullamcorper vehicula. Lorem ipsum dolor sit amet nullam.</p>
+										<h2>Muslim Community Center</h2>
+										<p>Short description, address, etc.</p>
 										<ul class="actions">
-											<li><a href="#" class="button primary">Learn More</a></li>
+											<li><a href="#" class="button primary">Visit Us</a></li>
 										</ul>
 									</div>
 								</div>
@@ -157,6 +158,9 @@
 		<!-- Footer -->
 			<div id="footer" class="wrapper">
 				<div class="inner">
+					<section>
+						<h2>Site Map Goes Here</h2>
+					</section>
 					<!-- <header>
 						<h2>Get in touch</h2>
 						<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus ferment. Pellentesque a diam sit amet amet dolor ullamcorper vehicula. Lorem ipsum dolor sit amet dolor sit amet consequat.</p>
