--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Mosque Events</title>
+		<title>Muslim Events</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -12,7 +12,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<a class="logo" href="index.html">Mosque Events</a>
+				<a class="logo" href="index.html">NAME</a>
 				<nav id="nav">
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
