Delete submenu and change navbar categories

--- a/city.html
+++ b/city.html
@@ -22,20 +22,11 @@
 								<li><a href="mosque.html">Orland Park Prayer Center</a></li>
 								<li><a href="#">The Mecca Center</a></li>
 								<li><a href="#">Muslim Community Center</a></li>
-								<!-- <li>
-									<a href="#">Submenu</a>
-									<ul>
-										<li><a href="#">Option One</a></li>
-										<li><a href="#">Option Two</a></li>
-										<li><a href="#">Option Three</a></li>
-										<li><a href="#">Option Four</a></li>
-									</ul>
-								</li> -->
 							</ul>
 						</li>
 						<!-- <li><a href="elements.html">Elements</a></li> -->
-						<li><a href="#">Members</a></li>
-						<li><a href="#">Contact/Advertise With Us</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Work With Us</a></li>
 					</ul>
 				</nav>
 			</header>
