Add coming soon

--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 						<li>
 							<a href="#" class="icon solid fa-angle-down">Cities</a>
 							<ul>
-								<li><a href="#">Atlanta</a></li>
+								<li><a href="#">Atlanta Coming Soon!</a></li>
 								<li><a href="#">Bay Area</a></li>
 								<li><a href="#">Boston</a></li>
                                 <li><a href="city.html">Chicago</a></li>
