Add coming soon to Bay Area

--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 							<a href="#" class="icon solid fa-angle-down">Cities</a>
 							<ul>
 								<li><a href="#">Atlanta Coming Soon!</a></li>
-								<li><a href="#">Bay Area</a></li>
+								<li><a href="#">Bay Area Coming Soon!</a></li>
 								<li><a href="#">Boston</a></li>
                                 <li><a href="city.html">Chicago</a></li>
                                 <li><a href="#">Dallas</a></li>
