Add spans and change color of font for Coming Soon

--- a/main.html
+++ b/main.html
@@ -19,9 +19,9 @@
 						<li>
 							<a href="#" class="icon solid fa-angle-down">Cities</a>
 							<ul>
-								<li><a href="#">Atlanta Coming Soon!</a></li>
-								<li><a href="#">Bay Area Coming Soon!</a></li>
-								<li><a href="#">Boston</a></li>
+								<li><a href="#">Atlanta <span style="color: red;">Coming Soon!</span></a></li>
+								<li><a href="#">Bay Area <span style="color: red;">Coming Soon!</span></a></li>
+								<li><a href="#">Boston <span style="color: red;">Coming Soon!</span></a></li>
                                 <li><a href="city.html">Chicago</a></li>
                                 <li><a href="#">Dallas</a></li>
                                 <li><a href="#">Detroit</a></li>
