Add more cities Coming Soon

--- a/main.html
+++ b/main.html
@@ -23,10 +23,10 @@
 								<li><a href="#">Bay Area <span style="color: red;">Coming Soon!</span></a></li>
 								<li><a href="#">Boston <span style="color: red;">Coming Soon!</span></a></li>
                                 <li><a href="city.html">Chicago</a></li>
-                                <li><a href="#">Dallas</a></li>
-                                <li><a href="#">Detroit</a></li>
-                                <li><a href="#">DMV</a></li>
-                                <li><a href="#">Houston</a></li>
+                                <li><a href="#">Dallas <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">Detroit <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">DMV <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">Houston <span style="color: red;">Coming Soon!</span></a></li>
                                 <li><a href="#">Inland Empire</a></li>
                                 <li><a href="#">Los Angeles</a></li>
                                 <li><a href="#">Miami</a></li>
