Add more cities to coming soon list

--- a/main.html
+++ b/main.html
@@ -27,11 +27,11 @@
                                 <li><a href="#">Detroit <span style="color: red;">Coming Soon!</span></a></li>
                                 <li><a href="#">DMV <span style="color: red;">Coming Soon!</span></a></li>
                                 <li><a href="#">Houston <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Inland Empire</a></li>
-                                <li><a href="#">Los Angeles</a></li>
-                                <li><a href="#">Miami</a></li>
-                                <li><a href="#">NYC</a></li>
-                                <li><a href="#">Orange County</a></li>
+                                <li><a href="#">Inland Empire <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">Los Angeles <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">Miami <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">NYC <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">Orange County <span style="color: red;">Coming Soon!</span></a></li>
                                 <li><a href="#">Philadelphia</a></li>
                                 <li><a href="#">Phoenix</a></li>
                                 <li><a href="#">San Diego</a></li>
