--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 						<li class="current"><a href="main.html">Home</a></li>
 						<li>
 							<a href="#" class="icon solid fa-angle-down">Cities</a>
-							<ul>
+							<ul class="dropdown-menu" style="display: grid; grid-template-columns: repeat(3, 1fr);">
 								<li><a href="#">Atlanta <span style="color: red;">Coming Soon!</span></a></li>
 								<li><a href="#">Bay Area <span style="color: red;">Coming Soon!</span></a></li>
 								<li><a href="#">Boston <span style="color: red;">Coming Soon!</span></a></li>
