--- a/main.html
+++ b/main.html
@@ -32,14 +32,14 @@
                                 <li><a href="#">Miami <span style="color: red;">Coming Soon!</span></a></li>
                                 <li><a href="#">NYC <span style="color: red;">Coming Soon!</span></a></li>
                                 <li><a href="#">Orange County <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Philadelphia</a></li>
-                                <li><a href="#">Phoenix</a></li>
-                                <li><a href="#">San Diego</a></li>
-                                <li><a href="#">Seattle</a></li>
-                                <li><a href="#">St. Louis</a></li>
-                                <li><a href="#">Toronto</a></li>
-                                <li><a href="#">Twin Cities</a></li>
-                                <li><a href="#">Vancouver Coming Soon!</a></li>
+                                <li><a href="#">Philadelphia <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">Phoenix <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">San Diego <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">Seattle <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">St. Louis <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">Toronto <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">Twin Cities <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">Vancouver <span style="color: red;">Coming Soon!</span></a></li>
 							</ul>
 						</li>
 						<!-- <li><a href="elements.html">Elements</a></li> -->
