--- a/main.html
+++ b/main.html
@@ -19,27 +19,27 @@
 						<li>
 							<a href="#" class="icon solid fa-angle-down">Cities</a>
 							<ul class="dropdown-menu" style="display: grid; grid-template-columns: repeat(3, 1fr);">
-								<li><a href="#">Atlanta <span style="color: red;">Coming Soon!</span></a></li>
-								<li><a href="#">Bay Area <span style="color: red;">Coming Soon!</span></a></li>
-								<li><a href="#">Boston <span style="color: red;">Coming Soon!</span></a></li>
+								<li><a href="#">Atlanta <span class="soon">Coming Soon!</span></a></li>
+								<li><a href="#">Bay Area <span class="soon">Coming Soon!</span></a></li>
+								<li><a href="#">Boston <span class="soon">Coming Soon!</a></li>
                                 <li><a href="city.html">Chicago</a></li>
-                                <li><a href="#">Dallas <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Detroit <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">DMV <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Houston <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Inland Empire <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Los Angeles <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Miami <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">NYC <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Orange County <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Philadelphia <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Phoenix <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">San Diego <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Seattle <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">St. Louis <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Toronto <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Twin Cities <span style="color: red;">Coming Soon!</span></a></li>
-                                <li><a href="#">Vancouver <span style="color: red;">Coming Soon!</span></a></li>
+                                <li><a href="#">Dallas <span class="soon">Coming Soon!</a></li>
+                                <li><a href="#">Detroit <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">DMV <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">Houston <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">Inland Empire <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">Los Angeles <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">Miami <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">NYC <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">Orange County <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">Philadelphia <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">Phoenix <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">San Diego <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">Seattle <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">St. Louis <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">Toronto <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">Twin Cities <span class="soon">Coming Soon!</span></a></li>
+                                <li><a href="#">Vancouver <span class="soon">Coming Soon!</span></a></li>
 							</ul>
 						</li>
 						<!-- <li><a href="elements.html">Elements</a></li> -->
