Add div for background pic and NAME

--- a/main.html
+++ b/main.html
@@ -49,6 +49,9 @@
 				</nav>
 			</header>
 
+			<div class="background title">North American Muslim Events</div>
+			
+
 		<!-- Banner -->
 			<div id="banner" class="wrapper">
 				<div class="inner">
