Add section for grBand

--- a/main.html
+++ b/main.html
@@ -50,10 +50,10 @@
 			</header>
 
 			<div class="background title">North American Muslim Events</div>
-			
-
+		
 		<!-- Banner -->
 			<div id="banner" class="wrapper">
+				<section class="grBand">Find Muslim events in your area!</section>
 				<div class="inner">
 					<div class="content">
 						<h1>Event listings</h1>
