--- a/main.html
+++ b/main.html
@@ -59,7 +59,7 @@
 						<h1>Event listings</h1>
 						<p>Short description about the goal of the website for consumers</p>
 						<ul class="actions">
-							<li><a href="#one" class="button large primary scrolly">Find A Mosque</a></li>
+							<li><a href="#one" class="button large primary scrolly">Pick A City</a></li>
 						</ul>
 					</div>
 					<div class="image-wrapper">
