Add NAME copyright

--- a/main.html
+++ b/main.html
@@ -229,7 +229,8 @@
 						</div>
 					</section> -->
 					<p class="copyright">
-						&copy; Joe Hladnik Web Development. All rights reserved.
+						<span class="copyBorder">&copy; NORTH AMERICAN MUSLIM EVENTS. All rights reserved.</span><br>
+						<span>Build by Joe Hladnik Web Development.</span>
 					</p>
 				</div>
 			</div>
