--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
-		<meta name="keywords" content="Muslim, events" />
+		<meta name="keywords" content="Muslim, events, north america" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
