--- a/main.html
+++ b/main.html
@@ -74,18 +74,20 @@
 					<section id="one" class="wrapper style1">
 						<div class="inner">
 							<div class="spotlights">
-								<div class="spotlight">
-									<div class="image fit">
-										<img src="images/pic02.png" alt="" />
+								<a href="mosque.html">
+									<div class="spotlight">
+										<div class="image fit">
+											<img src="images/pic02.png" alt="" />
+										</div>
+										<div class="content">
+											<h2>Orland Park Prayer Center</h2>
+											<p>Short description, address, etc.</p>
+											<!-- <ul class="actions">
+												<li><a href="mosque.html" class="button primary">Visit Us</a></li>
+											</ul> -->
+										</div>
 									</div>
-									<div class="content">
-										<h2>Orland Park Prayer Center</h2>
-										<p>Short description, address, etc.</p>
-										<ul class="actions">
-											<li><a href="mosque.html" class="button primary">Visit Us</a></li>
-										</ul>
-									</div>
-								</div>
+								</a>
 								<div class="spotlight">
 									<div class="image fit alt">
 										<img src="images/pic03.png" alt="" />
@@ -108,6 +110,15 @@
 										<ul class="actions">
 											<li><a href="#" class="button primary">Visit Us</a></li>
 										</ul>
+									</div>
+								</div>
+								<div class="spotlight">
+									<div class="image fit alt">
+										<img src="" alt="">
+									</div>
+									<div class="content">
+										<h2>Something Here</h2>
+										<p>Description</p>
 									</div>
 								</div>
 							</div>
