Add links around current sections add temp secs

--- a/main.html
+++ b/main.html
@@ -74,7 +74,7 @@
 					<section id="one" class="wrapper style1">
 						<div class="inner">
 							<div class="spotlights">
-								<a href="mosque.html">
+								<a href="#">
 									<div class="spotlight">
 										<div class="image fit">
 											<img src="images/pic02.png" alt="" />
@@ -82,45 +82,53 @@
 										<div class="content">
 											<h2>Orland Park Prayer Center</h2>
 											<p>Short description, address, etc.</p>
-											<!-- <ul class="actions">
-												<li><a href="mosque.html" class="button primary">Visit Us</a></li>
-											</ul> -->
 										</div>
 									</div>
 								</a>
-								<div class="spotlight">
-									<div class="image fit alt">
-										<img src="images/pic03.png" alt="" />
+								<a href="#">
+									<div class="spotlight">
+										<div class="image fit alt">
+											<img src="images/pic03.png" alt="" />
+										</div>
+										<div class="content">
+											<h2>The Mecca Center</h2>
+											<p>Short description, address, etc.</p>
+										</div>
 									</div>
-									<div class="content">
-										<h2>The Mecca Center</h2>
-										<p>Short description, address, etc.</p>
-										<ul class="actions">
-											<li><a href="mosque.html" class="button primary">Visit Us</a></li>
-										</ul>
+								</a>
+								<a href="#">
+									<div class="spotlight">
+										<div class="image fit">
+											<img src="images/pic04.png" alt="" />
+										</div>
+										<div class="content">
+											<h2>Muslim Community Center</h2>
+											<p>Short description, address, etc.</p>
+										</div>
 									</div>
-								</div>
-								<div class="spotlight">
-									<div class="image fit">
-										<img src="images/pic04.png" alt="" />
+								</a>
+								<a href="#">
+									<div class="spotlight">
+										<div class="image fit alt">
+											<img src="" alt="">
+										</div>
+										<div class="content">
+											<h2>Something Here</h2>
+											<p>Description</p>
+										</div>
 									</div>
-									<div class="content">
-										<h2>Muslim Community Center</h2>
-										<p>Short description, address, etc.</p>
-										<ul class="actions">
-											<li><a href="#" class="button primary">Visit Us</a></li>
-										</ul>
+								</a>
+								<a href="#">
+									<div class="spotlight">
+										<div class="image fit">
+											<img src="" alt="">
+										</div>
+										<div class="content">
+											<h2>OR Something Here</h2>
+											<p>Description</p>
+										</div>
 									</div>
-								</div>
-								<div class="spotlight">
-									<div class="image fit alt">
-										<img src="" alt="">
-									</div>
-									<div class="content">
-										<h2>Something Here</h2>
-										<p>Description</p>
-									</div>
-								</div>
+								</a>
 							</div>
 						</div>
 					</section>
