Add temp pics in temp secs

--- a/main.html
+++ b/main.html
@@ -110,7 +110,7 @@
 								<a href="#">
 									<div class="spotlight">
 										<div class="image fit alt">
-											<img src="" alt="">
+											<img src="images/pic05.jpg" alt="">
 										</div>
 										<div class="content">
 											<h2>Something Here</h2>
@@ -121,7 +121,7 @@
 								<a href="#">
 									<div class="spotlight">
 										<div class="image fit">
-											<img src="" alt="">
+											<img src="images/pic05.jpg" alt="">
 										</div>
 										<div class="content">
 											<h2>OR Something Here</h2>
