Add additional blank divs for future

--- a/city.html
+++ b/city.html
@@ -89,6 +89,24 @@
 										</ul>
 									</div>
 								</div>
+								<div class="spotlight">
+									<div class="image fit alt">
+										<img src="images/pic05.jpg" alt="">
+									</div>
+									<div class="content">
+										<h2>Something Here</h2>
+										<!-- <p>Coming Soon! / New</p> -->
+									</div>
+								</div>
+								<div class="spotlight">
+									<div class="image fit">
+										<img src="images/pic05.jpg" alt="">
+									</div>
+									<div class="content">
+										<h2>Something Here</h2>
+										<!-- <p>Coming Soon! / New</p> -->
+									</div>
+								</div>
 							</div>
 						</div>
 					</section>
