Create row format with square class

--- a/main.html
+++ b/main.html
@@ -73,59 +73,54 @@
 			<div id="wrapper">
 					<section id="one" class="wrapper style1">
 						<div class="inner">
-							<div class="spotlights">
+							<div class="spotlights row aln-center col-4">
 								<a href="#">
-									<div class="spotlight">
-										<div class="image fit">
+									<div class="square">
+										<div class="squareImage fit">
 											<img src="images/pic02.png" alt="" />
 										</div>
 										<div class="content">
-											<h2>Orland Park Prayer Center</h2>
-											<p>Short description, address, etc.</p>
+											<p style="color: white">Atlanta <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
 								</a>
 								<a href="#">
-									<div class="spotlight">
-										<div class="image fit alt">
-											<img src="images/pic03.png" alt="" />
+									<div class="square">
+										<div class="sqaureImage fit">
+											<img src="images/pic02.png" alt="" />
 										</div>
 										<div class="content">
-											<h2>The Mecca Center</h2>
-											<p>Short description, address, etc.</p>
+											<p style="color: white">Atlanta <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
 								</a>
 								<a href="#">
-									<div class="spotlight">
-										<div class="image fit">
-											<img src="images/pic04.png" alt="" />
+									<div class="square">
+										<div class="sqaureImage fit">
+											<img src="images/pic02.png" alt="" />
 										</div>
 										<div class="content">
-											<h2>Muslim Community Center</h2>
-											<p>Short description, address, etc.</p>
+											<p style="color: white">Atlanta <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
 								</a>
 								<a href="#">
-									<div class="spotlight">
-										<div class="image fit alt">
-											<img src="images/pic05.jpg" alt="">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/pic02.png" alt="">
 										</div>
 										<div class="content">
-											<h2>Something Here</h2>
-											<p>Description</p>
+											<p style="color: white">Atlanta <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
 								</a>
 								<a href="#">
-									<div class="spotlight">
-										<div class="image fit">
-											<img src="images/pic05.jpg" alt="">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/pic02.png" alt="">
 										</div>
 										<div class="content">
-											<h2>OR Something Here</h2>
-											<p>Description</p>
+											<p style="color: white">Atlanta <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
 								</a>
