--- a/main.html
+++ b/main.html
@@ -77,7 +77,7 @@
 								<a href="#">
 									<div class="square">
 										<div class="squareImage fit">
-											<img src="images/pic02.png" alt="" />
+											<img src="images/atlanta.jpg" alt="" />
 										</div>
 										<div class="content">
 											<p style="color: white">Atlanta <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
@@ -87,40 +87,40 @@
 								<a href="#">
 									<div class="square">
 										<div class="sqaureImage fit">
-											<img src="images/pic02.png" alt="" />
+											<img src="images/bayarea.jpg" alt="" />
 										</div>
 										<div class="content">
-											<p style="color: white">Atlanta <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+											<p style="color: white">Bay Area <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
 								</a>
 								<a href="#">
 									<div class="square">
 										<div class="sqaureImage fit">
-											<img src="images/pic02.png" alt="" />
+											<img src="images/boston.jpg" alt="" />
 										</div>
 										<div class="content">
-											<p style="color: white">Atlanta <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+											<p style="color: white">Boston <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="chicago.html">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/chicago.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Chicago <span style="color: red; font-size: 18px;">New</span></p>
 										</div>
 									</div>
 								</a>
 								<a href="#">
 									<div class="square">
 										<div class="squareImage fit">
-											<img src="images/pic02.png" alt="">
+											<img src="images/dallas.jpg" alt="">
 										</div>
 										<div class="content">
-											<p style="color: white">Atlanta <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
-										</div>
-									</div>
-								</a>
-								<a href="#">
-									<div class="square">
-										<div class="squareImage fit">
-											<img src="images/pic02.png" alt="">
-										</div>
-										<div class="content">
-											<p style="color: white">Atlanta <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+											<p style="color: white">Dallas <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
 								</a>
