Change color for "new"

--- a/main.html
+++ b/main.html
@@ -110,7 +110,7 @@
 											<img src="images/chicago.jpg" alt="">
 										</div>
 										<div class="content">
-											<p style="color: white">Chicago <span style="color: red; font-size: 18px;">New</span></p>
+											<p style="color: white">Chicago <span style="color: #2bad6c; font-size: 18px;">New</span></p>
 										</div>
 									</div>
 								</a>
