--- a/main.html
+++ b/main.html
@@ -70,7 +70,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="wrapper">
+			<!-- <div id="wrapper"> -->
 					<section id="one" class="wrapper style1">
 						<div class="inner">
 							<div class="spotlights row aln-center col-4">
@@ -124,63 +124,170 @@
 										</div>
 									</div>
 								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/detroit.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Detroit <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/DMV.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">DMV <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/houston.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Houston <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/IE.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Inland Empire <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/la.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Los Angeles <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/miami.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Miami <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/NYC.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">NYC <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/OC.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Orange County <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/philadephia.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Philadelphia <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/phoenix.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Phoenix <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/sandiego.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">San Diego <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/seattle.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Seattle <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/stlouis.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">St. Louis <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/toronto.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Toronto <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/twincities.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Twin Cities <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
+								<a href="#">
+									<div class="square">
+										<div class="squareImage fit">
+											<img src="images/vancouver.jpg" alt="">
+										</div>
+										<div class="content">
+											<p style="color: white">Vancouver <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
+										</div>
+									</div>
+								</a>
 							</div>
 						</div>
 					</section>
-					<!-- <section id="two" class="wrapper style1">
-						<div class="inner">
-							<div class="features">
-								<div class="feature">
-									<span class="icon solid alt major fa-cube"></span>
-									<h2>Etiam consequat</h2>
-									<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet.</p>
-								</div>
-								<div class="feature">
-									<span class="icon solid alt major fa-camera-retro"></span>
-									<h2>Dolor vehicula</h2>
-									<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet.</p>
-								</div>
-								<div class="feature">
-									<span class="icon solid alt major fa-sitemap"></span>
-									<h2>Nibh convallis</h2>
-									<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet.</p>
-								</div>
-								<div class="feature">
-									<span class="icon solid alt major fa-laptop"></span>
-									<h2>Amet interdum</h2>
-									<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet.</p>
-								</div>
-								<div class="feature">
-									<span class="icon solid alt major fa-battery-full"></span>
-									<h2>Nec augue etiam</h2>
-									<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet.</p>
-								</div>
-								<div class="feature">
-									<span class="icon solid alt major fa-paper-plane"></span>
-									<h2>Aliquam veroeros</h2>
-									<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet.</p>
-								</div>
-							</div>
-						</div>
-					</section> -->
-
-				<!-- Three
-					<section id="three" class="wrapper style1">
-						<div class="inner">
-							<div class="box cta">
-								<div class="content">
-									<h2>Odio dapibus adipiscing</h2>
-									<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus ferment. Pellentesque a diam sit amet amet dolor ullamcorper vehicula. Lorem ipsum dolor sit amet dolor sit amet consequat.</p>
-								</div>
-								<ul class="actions stacked">
-									<li><a href="#" class="button primary large fit">Get Started</a></li>
-									<li><a href="#" class="button large fit">Learn More</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-			</div> -->
-
+					
 		<!-- Footer -->
 			<div id="footer" class="wrapper">
 				<div class="inner">
