Change mispelled classes

--- a/main.html
+++ b/main.html
@@ -86,7 +86,7 @@
 								</a>
 								<a href="#">
 									<div class="square">
-										<div class="sqaureImage fit">
+										<div class="squareImage fit">
 											<img src="images/bayarea.jpg" alt="" />
 										</div>
 										<div class="content">
@@ -96,7 +96,7 @@
 								</a>
 								<a href="#">
 									<div class="square">
-										<div class="sqaureImage fit">
+										<div class="squareImage fit">
 											<img src="images/boston.jpg" alt="" />
 										</div>
 										<div class="content">
