--- a/chicago.html
+++ b/chicago.html
@@ -35,7 +35,7 @@
 			<div id="banner" class="wrapper">
 				<div class="inner">
 					<div class="content">
-						<h1>Event listings</h1>
+						<h1>Salaam from Chicago!</h1>
 						<p>Short description about the goal of the website for consumers</p>
 						<ul class="actions">
 							<li><a href="#one" class="button large primary scrolly">Find A Mosque</a></li>
