Add mosques to dropdown

--- a/chicago.html
+++ b/chicago.html
@@ -19,9 +19,18 @@
 						<li>
 							<a href="#" class="icon solid fa-angle-down">Mosques</a>
 							<ul>
+								<li><a href="mosque.html">Islamic Center of Des Plaines</a></li>
+								<li><a href="mosque.html">Islamic Center of Naperville - 75th Street</a></li>
+								<li><a href="mosque.html">Islamic Center of Naperville - Ogden</a></li>
+								<li><a href="mosque.html">Islamic Foundation North</a></li>
+								<li><a href="mosque.html">Islamic Foundation - Villa Park</a></li>
+								<li><a href="mosque.html">Masjid Al Huda</a></li>
+								<li><a href="mosque.html">MCC - Chicago</a></li>
+								<li><a href="mosque.html">MEC - Morton Grove</a></li>
+								<li><a href="mosque.html">Mosque Foundation</a></li>
 								<li><a href="mosque.html">Orland Park Prayer Center</a></li>
-								<li><a href="#">The Mecca Center</a></li>
-								<li><a href="#">Muslim Community Center</a></li>
+								<li><a href="mosque.html">Palos Islamic Center</a></li>
+								<li><a href="mosque.html">The Mecca Center</a></li>
 							</ul>
 						</li>
 						<!-- <li><a href="elements.html">Elements</a></li> -->
