Add dropdown class and grid

--- a/chicago.html
+++ b/chicago.html
@@ -18,7 +18,7 @@
 						<li class="current"><a href="main.html">Home</a></li>
 						<li>
 							<a href="#" class="icon solid fa-angle-down">Mosques</a>
-							<ul>
+							<ul class="dropdown-menu" style="display: grid; grid-template-columns: repeat(2, 1fr);">
 								<li><a href="mosque.html">Islamic Center of Des Plaines</a></li>
 								<li><a href="mosque.html">Islamic Center of Naperville - 75th Street</a></li>
 								<li><a href="mosque.html">Islamic Center of Naperville - Ogden</a></li>
