Change content to squareContent

--- a/main.html
+++ b/main.html
@@ -79,7 +79,7 @@
 										<div class="squareImage fit">
 											<img src="images/atlanta.jpg" alt="" />
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Atlanta <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -89,7 +89,7 @@
 										<div class="squareImage fit">
 											<img src="images/bayarea.jpg" alt="" />
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Bay Area <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -99,7 +99,7 @@
 										<div class="squareImage fit">
 											<img src="images/boston.jpg" alt="" />
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Boston <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -109,7 +109,7 @@
 										<div class="squareImage fit">
 											<img src="images/chicago.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Chicago <span style="color: #2bad6c; font-size: 18px;">New</span></p>
 										</div>
 									</div>
@@ -119,7 +119,7 @@
 										<div class="squareImage fit">
 											<img src="images/dallas.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Dallas <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -129,7 +129,7 @@
 										<div class="squareImage fit">
 											<img src="images/detroit.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Detroit <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -139,7 +139,7 @@
 										<div class="squareImage fit">
 											<img src="images/DMV.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">DMV <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -149,7 +149,7 @@
 										<div class="squareImage fit">
 											<img src="images/houston.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Houston <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -159,7 +159,7 @@
 										<div class="squareImage fit">
 											<img src="images/IE.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Inland Empire <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -169,7 +169,7 @@
 										<div class="squareImage fit">
 											<img src="images/la.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Los Angeles <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -179,7 +179,7 @@
 										<div class="squareImage fit">
 											<img src="images/miami.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Miami <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -189,7 +189,7 @@
 										<div class="squareImage fit">
 											<img src="images/NYC.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">NYC <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -199,7 +199,7 @@
 										<div class="squareImage fit">
 											<img src="images/OC.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Orange County <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -209,7 +209,7 @@
 										<div class="squareImage fit">
 											<img src="images/philadephia.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Philadelphia <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -219,7 +219,7 @@
 										<div class="squareImage fit">
 											<img src="images/phoenix.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Phoenix <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -229,7 +229,7 @@
 										<div class="squareImage fit">
 											<img src="images/sandiego.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">San Diego <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -239,7 +239,7 @@
 										<div class="squareImage fit">
 											<img src="images/seattle.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Seattle <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -249,7 +249,7 @@
 										<div class="squareImage fit">
 											<img src="images/stlouis.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">St. Louis <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -259,7 +259,7 @@
 										<div class="squareImage fit">
 											<img src="images/toronto.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Toronto <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -269,7 +269,7 @@
 										<div class="squareImage fit">
 											<img src="images/twincities.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Twin Cities <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
@@ -279,7 +279,7 @@
 										<div class="squareImage fit">
 											<img src="images/vancouver.jpg" alt="">
 										</div>
-										<div class="content">
+										<div class="squareContent">
 											<p style="color: white">Vancouver <span style="color: red; font-size: 18px;">Coming Soon!</span></p>
 										</div>
 									</div>
