Remove site map and add back to top link

--- a/main.html
+++ b/main.html
@@ -292,7 +292,9 @@
 			<div id="footer" class="wrapper">
 				<div class="inner">
 					<section>
-						<h2>Site Map Goes Here</h2>
+						<ul class="actions fit">
+							<li><a href="#banner" class= "fit scrolly" style="color: #2bad6c">Back to top</a></li>
+						</ul>
 					</section>
 					<!-- <header>
 						<h2>Get in touch</h2>
