Change visit us to view events

--- a/chicago.html
+++ b/chicago.html
@@ -70,7 +70,7 @@
 										<h2>Orland Park Prayer Center</h2>
 										<p>Short description, address, etc.</p>
 										<ul class="actions">
-											<li><a href="mosque.html" class="button primary">Visit Us</a></li>
+											<li><a href="mosque.html" class="button primary">View Events</a></li>
 										</ul>
 									</div>
 								</div>
