--- a/chicago.html
+++ b/chicago.html
@@ -45,8 +45,7 @@
 				<div class="inner">
 					<div class="content">
 						<h1>Salaam from Chicago!</h1>
-						<p>Short description about the goal of the website for consumers</p>
-						<ul class="actions">
+						<ul style="display: flex; justify-content: center;" class="actions">
 							<li><a href="#one" class="button large primary scrolly">Find A Mosque</a></li>
 						</ul>
 					</div>
