--- a/city.html
+++ b/city.html
@@ -36,8 +36,7 @@
 				<div class="inner">
 					<div class="content">
 						<h1>Event listings</h1>
-						<p>Short description about the goal of the website for consumers</p>
-						<ul class="actions">
+						<ul style="display: flex; justify-content: center;" class="actions">
 							<li><a href="#one" class="button large primary scrolly">Find A Mosque</a></li>
 						</ul>
 					</div>
