--- a/main.html
+++ b/main.html
@@ -56,9 +56,7 @@
 				<section class="grBand">Find Muslim events in your area!</section>
 				<div class="inner">
 					<div class="content">
-						<h1>Event listings</h1>
-						<p>Short description about the goal of the website for consumers</p>
-						<ul class="actions">
+						<ul style="display: flex; justify-content: center; padding-top: 25%;" class="actions">
 							<li><a href="#one" class="button large primary scrolly">Pick A City</a></li>
 						</ul>
 					</div>
