Change button class to buttonEnter for arrow

--- a/chicago.html
+++ b/chicago.html
@@ -69,7 +69,7 @@
 										<h2>Orland Park Prayer Center</h2>
 										<p>Short description, address, etc.</p>
 										<ul class="actions">
-											<li><a href="mosque.html" class="button primary">View Events</a></li>
+											<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
 										</ul>
 									</div>
 								</div>
@@ -81,7 +81,7 @@
 										<h2>The Mecca Center</h2>
 										<p>Short description, address, etc.</p>
 										<ul class="actions">
-											<li><a href="mosque.html" class="button primary">Visit Us</a></li>
+											<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
 										</ul>
 									</div>
 								</div>
@@ -93,7 +93,7 @@
 										<h2>Muslim Community Center</h2>
 										<p>Short description, address, etc.</p>
 										<ul class="actions">
-											<li><a href="#" class="button primary">Visit Us</a></li>
+											<li><a href="#" class="buttonEnter primary">View Events</a></li>
 										</ul>
 									</div>
 								</div>
