Change link in dropdown

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 								<li><a href="#">Atlanta <span class="soon">Coming Soon!</span></a></li>
 								<li><a href="#">Bay Area <span class="soon">Coming Soon!</span></a></li>
 								<li><a href="#">Boston <span class="soon">Coming Soon!</a></li>
-                                <li><a href="city.html">Chicago</a></li>
+                                <li><a href="chicago.html">Chicago</a></li>
                                 <li><a href="#">Dallas <span class="soon">Coming Soon!</a></li>
                                 <li><a href="#">Detroit <span class="soon">Coming Soon!</span></a></li>
                                 <li><a href="#">DMV <span class="soon">Coming Soon!</span></a></li>
