Add Jumu'ah times

--- a/chicago.html
+++ b/chicago.html
@@ -67,10 +67,14 @@
 									</div>
 									<div class="content">
 										<h2>Orland Park Prayer Center</h2>
-										<p>Short description, address, etc.</p>
+										<p>address</p>
 										<ul class="actions">
 											<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
 										</ul>
+										<p style="font-size: 36px; color: white; margin-bottom: 5px;">Jumu'ah</p>
+										<p class="time">12:00p</p><br>
+										<p class="time">12:00p</p>
+										<p class="time">12:00p</p>
 									</div>
 								</div>
 								<div class="spotlight">
