Add web link and remove un-needed section

--- a/main.html
+++ b/main.html
@@ -294,64 +294,9 @@
 							<li><a href="#banner" class= "fit scrolly" style="color: #2bad6c">Back to top</a></li>
 						</ul>
 					</section>
-					<!-- <header>
-						<h2>Get in touch</h2>
-						<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus ferment. Pellentesque a diam sit amet amet dolor ullamcorper vehicula. Lorem ipsum dolor sit amet dolor sit amet consequat.</p>
-					</header>
-					<section class="contact-form">
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field half">
-									<input name="name" id="name" placeholder="Name" type="text" />
-								</div>
-								<div class="field half">
-									<input name="email" id="email" placeholder="Email" type="email" />
-								</div>
-								<div class="field">
-									<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
-								</div>
-								<div class="field">
-									<ul class="actions special">
-										<li><button type="submit" class="button primary" >Send Message</button></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</section> -->
-					<!-- <section class="contact-info">
-						<div class="item">
-							<span class="icon solid alt fa-home"></span>
-							<p>
-								1234 Fictional Rd #789<br />
-								Nashville, TN 00000
-							</p>
-						</div>
-						<div class="item">
-							<span class="icon solid alt fa-phone"></span>
-							<p>
-								(000) 000-0000 ext. 000
-							</p>
-						</div>
-						<div class="item">
-							<span class="icon solid alt fa-envelope"></span>
-							<a href="mailto:information@untitled.ext">information@untitled.ext</a>
-						</div>
-						<div class="item">
-							<span class="icon brands alt fa-twitter"></span>
-							<a href="#">twitter.com/untitled</a>
-						</div>
-						<div class="item">
-							<span class="icon brands alt fa-facebook-f"></span>
-							<a href="#">facebook.com/untitled</a>
-						</div>
-						<div class="item">
-							<span class="icon brands alt fa-linkedin-in"></span>
-							<a href="#">linkedin.com/untitled</a>
-						</div>
-					</section> -->
 					<p class="copyright">
 						<span class="copyBorder">&copy; NORTH AMERICAN MUSLIM EVENTS. All rights reserved.</span><br>
-						<span>Build by Joe Hladnik Web Development.</span>
+						<span>Build by <a href="https://www.joehladnik.com/">Joe Hladnik Web Development</a>.</span>
 					</p>
 				</div>
 			</div>
