--- a/chicago.html
+++ b/chicago.html
@@ -57,155 +57,88 @@
 					</div>
 				</div>
 			</div>
-			<div id="wrapper">
-					<section id="one" class="wrapper style1">
-						<div class="inner">
-							<div class="spotlights">
-								<div class="spotlight">
-									<div class="image fit">
-										<img src="images/pic02.png" alt="" />
-									</div>
-									<div class="content">
-										<h2>Orland Park Prayer Center</h2>
-										<p>address</p>
-										<ul class="actions">
-											<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
-										</ul>
-										<p style="font-size: 36px; color: white; margin-bottom: 5px;">Jumu'ah</p>
-										<p class="time">12:00p</p><br>
-										<p class="time">12:00p</p>
-										<p class="time">12:00p</p>
-									</div>
+			<div class="wrapper">
+				<section id="one" class="wrapper style1">
+					<div class="inner">
+						<div class="spotlights">
+							<div class="spotlight">
+								<div class="image fit">
+									<img src="images/pic02.png" alt="" />
 								</div>
-								<div class="spotlight">
-									<div class="image fit alt">
-										<img src="images/pic03.png" alt="" />
-									</div>
-									<div class="content">
-										<h2>The Mecca Center</h2>
-										<p>Short description, address, etc.</p>
-										<ul class="actions">
-											<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
-										</ul>
-									</div>
-								</div>
-								<div class="spotlight">
-									<div class="image fit">
-										<img src="images/pic04.png" alt="" />
-									</div>
-									<div class="content">
-										<h2>Muslim Community Center</h2>
-										<p>Short description, address, etc.</p>
-										<ul class="actions">
-											<li><a href="#" class="buttonEnter primary">View Events</a></li>
-										</ul>
-									</div>
-								</div>
-								<div class="spotlight">
-									<div class="image fit alt">
-										<img src="images/pic05.jpg" alt="">
-									</div>
-									<div class="content">
-										<h2>Something Here</h2>
-										<!-- <p>Coming Soon! / New</p> -->
-									</div>
-								</div>
-								<div class="spotlight">
-									<div class="image fit">
-										<img src="images/pic05.jpg" alt="">
-									</div>
-									<div class="content">
-										<h2>Something Here</h2>
-										<!-- <p>Coming Soon! / New</p> -->
-									</div>
-								</div>
-							</div>
-						</div>
-					</section>
-
-				<!-- Three
-					<section id="three" class="wrapper style1">
-						<div class="inner">
-							<div class="box cta">
 								<div class="content">
-									<h2>Odio dapibus adipiscing</h2>
-									<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus ferment. Pellentesque a diam sit amet amet dolor ullamcorper vehicula. Lorem ipsum dolor sit amet dolor sit amet consequat.</p>
+									<h2>Orland Park Prayer Center</h2>
+									<p>address</p>
+									<ul class="actions">
+										<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
+									</ul>
+									<p style="font-size: 36px; color: white; margin-bottom: 5px;">Jumu'ah</p>
+									<p class="time">12:00p</p><br>
+									<p class="time">12:00p</p>
+									<p class="time">12:00p</p>
 								</div>
-								<ul class="actions stacked">
-									<li><a href="#" class="button primary large fit">Get Started</a></li>
-									<li><a href="#" class="button large fit">Learn More</a></li>
-								</ul>
 							</div>
-						</div>
-					</section>
-			</div> -->
-
-		<!-- Footer -->
-			<div id="footer" class="wrapper">
-				<div class="inner">
-					<section>
-						<h2>Site Map Goes Here</h2>
-					</section>
-					<!-- <header>
-						<h2>Get in touch</h2>
-						<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus ferment. Pellentesque a diam sit amet amet dolor ullamcorper vehicula. Lorem ipsum dolor sit amet dolor sit amet consequat.</p>
-					</header> -->
-					<!-- <section class="contact-form"> -->
-						<!-- <form method="post" action="#">
-							<div class="fields">
-								<div class="field half">
-									<input name="name" id="name" placeholder="Name" type="text" />
+							<div class="spotlight">
+								<div class="image fit alt">
+									<img src="images/pic03.png" alt="" />
 								</div>
-								<div class="field half">
-									<input name="email" id="email" placeholder="Email" type="email" />
-								</div>
-								<div class="field">
-									<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
-								</div>
-								<div class="field">
-									<ul class="actions special">
-										<li><button type="submit" class="button primary" >Send Message</button></li>
+								<div class="content">
+									<h2>The Mecca Center</h2>
+									<p>Short description, address, etc.</p>
+									<ul class="actions">
+										<li><a href="mosque.html" class="buttonEnter primary">View Events</a></li>
 									</ul>
 								</div>
 							</div>
-						</form>
-					</section> -->
-					<!-- <section class="contact-info">
-						<div class="item">
-							<span class="icon solid alt fa-home"></span>
-							<p>
-								1234 Fictional Rd #789<br />
-								Nashville, TN 00000
-							</p>
+							<div class="spotlight">
+								<div class="image fit">
+									<img src="images/pic04.png" alt="" />
+								</div>
+								<div class="content">
+									<h2>Muslim Community Center</h2>
+									<p>Short description, address, etc.</p>
+									<ul class="actions">
+										<li><a href="#" class="buttonEnter primary">View Events</a></li>
+									</ul>
+								</div>
+							</div>
+							<div class="spotlight">
+								<div class="image fit alt">
+									<img src="images/pic05.jpg" alt="">
+								</div>
+								<div class="content">
+									<h2>Something Here</h2>
+									<!-- <p>Coming Soon! / New</p> -->
+								</div>
+							</div>
+							<div class="spotlight">
+								<div class="image fit">
+									<img src="images/pic05.jpg" alt="">
+								</div>
+								<div class="content">
+									<h2>Something Here</h2>
+									<!-- <p>Coming Soon! / New</p> -->
+								</div>
+							</div>
 						</div>
-						<div class="item">
-							<span class="icon solid alt fa-phone"></span>
-							<p>
-								(000) 000-0000 ext. 000
-							</p>
-						</div>
-						<div class="item">
-							<span class="icon solid alt fa-envelope"></span>
-							<a href="mailto:information@untitled.ext">information@untitled.ext</a>
-						</div>
-						<div class="item">
-							<span class="icon brands alt fa-twitter"></span>
-							<a href="#">twitter.com/untitled</a>
-						</div>
-						<div class="item">
-							<span class="icon brands alt fa-facebook-f"></span>
-							<a href="#">facebook.com/untitled</a>
-						</div>
-						<div class="item">
-							<span class="icon brands alt fa-linkedin-in"></span>
-							<a href="#">linkedin.com/untitled</a>
-						</div>
-					</section> -->
-					<p class="copyright">
-						&copy; Joe Hladnik Web Development. All rights reserved.
-					</p>
-				</div>
+					</div>
+				</section>
 			</div>
+
+
+		<!-- Footer -->
+		<div id="footer" class="wrapper">
+			<div class="inner">
+				<section>
+					<ul class="actions fit">
+						<li><a href="#banner" class= "fit scrolly" style="color: #2bad6c">Back to top</a></li>
+					</ul>
+				</section>
+				<p class="copyright">
+					<span class="copyBorder">&copy; NORTH AMERICAN MUSLIM EVENTS. All rights reserved.</span><br>
+					<span>Build by <a href="https://www.joehladnik.com/">Joe Hladnik Web Development</a>.</span>
+				</p>
+			</div>
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
