Delete sections, change file paths

--- a/mosque.html
+++ b/mosque.html
@@ -12,29 +12,27 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Mosque Events</a>
+				<a class="logo" href="chicago.html">Chicago</a>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li>
-							<a href="#" class="icon solid fa-angle-down">Mosques</a>
-							<ul>
-								<li><a href="#">Mosque#1</a></li>
-								<li><a href="#">Mosque#2</a></li>
-								<li><a href="#">Mosque#3</a></li>
-								<!-- <li>
-									<a href="#">Submenu</a>
-									<ul>
-										<li><a href="#">Option One</a></li>
-										<li><a href="#">Option Two</a></li>
-										<li><a href="#">Option Three</a></li>
-										<li><a href="#">Option Four</a></li>
-									</ul>
-								</li> -->
+							<a href="#" class="icon solid fa-angle-down">Chicago</a>
+							<ul class="dropdown-menu" style="display: grid; grid-template-columns: repeat(2, 1fr);">
+								<li><a href="mosque.html">Islamic Center of Des Plaines</a></li>
+								<li><a href="mosque.html">Islamic Center of Naperville - 75th Street</a></li>
+								<li><a href="mosque.html">Islamic Center of Naperville - Ogden</a></li>
+								<li><a href="mosque.html">Islamic Foundation North</a></li>
+								<li><a href="mosque.html">Islamic Foundation - Villa Park</a></li>
+								<li><a href="mosque.html">Masjid Al Huda</a></li>
+								<li><a href="mosque.html">MCC - Chicago</a></li>
+								<li><a href="mosque.html">MEC - Morton Grove</a></li>
+								<li><a href="mosque.html">Mosque Foundation</a></li>
+								<li><a href="mosque.html">Orland Park Prayer Center</a></li>
+								<li><a href="mosque.html">Palos Islamic Center</a></li>
+								<li><a href="mosque.html">The Mecca Center</a></li>
 							</ul>
 						</li>
-						<!-- <li class="current"><a href="generic.html">Generic</a></li> -->
-						<!-- <li><a href="elements.html">Elements</a></li> -->
 						<li><a href="#">Members</a></li>
 					</ul>
 				</nav>
@@ -59,30 +57,6 @@
 		<!-- Footer -->
 			<div id="footer" class="wrapper">
 				<div class="inner">
-					<!-- <header>
-						<h2>Get in touch</h2>
-						<p>Ut convallis, sem sit amet interdum consectetuer, odio augue aliquam leo, nec dapibus tortor nibh sed augue. Integer eu magna sit amet metus ferment. Pellentesque a diam sit amet amet dolor ullamcorper vehicula. Lorem ipsum dolor sit amet dolor sit amet consequat.</p>
-					</header>
-					<section class="contact-form">
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field half">
-									<input name="name" id="name" placeholder="Name" type="text" />
-								</div>
-								<div class="field half">
-									<input name="email" id="email" placeholder="Email" type="email" />
-								</div>
-								<div class="field">
-									<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
-								</div>
-								<div class="field">
-									<ul class="actions special">
-										<li><button type="submit" class="button primary" >Send Message</button></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</section> -->
 					<section class="contact-info">
 						<div class="item">
 							<span class="icon solid alt fa-home"></span>
@@ -115,7 +89,8 @@
 						</div>
 					</section>
 					<p class="copyright">
-						&copy; Joe Hladnik Web Development. All rights reserved.
+						<span class="copyBorder">&copy; NORTH AMERICAN MUSLIM EVENTS. All rights reserved.</span><br>
+						<span>Build by <a href="https://www.joehladnik.com/">Joe Hladnik Web Development</a>.</span>
 					</p>
 				</div>
 			</div>
