Change file paths

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<a class="logo" href="main.html">NAME</a>
+				<a class="logo" href="#">NAME</a>
 				<nav id="nav">
 					<ul>
-						<li class="current"><a href="main.html">Home</a></li>
+						<li class="current"><a href="#">Home</a></li>
 						<li>
 							<a href="#" class="icon solid fa-angle-down">Cities</a>
 							<ul class="dropdown-menu" style="display: grid; grid-template-columns: repeat(3, 1fr);">
